@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<sharing xmlns:i18n="http://xml.zope.org/namespaces/i18n" i18n:domain="plone">
+  <role
+      id="TrackerManager"
+      title="Can manage tracker"
+      permission="Poi: Manage tracker"
+      i18n:attributes="title"
+      />
+</sharing>
