@@ -97,21 +97,23 @@ class TestTracker(ptc.PoiTestCase):
     def testManagersGetLocalRole(self):
         roles = self.tracker.get_local_roles_for_userid
         self.failIf('Manager' in roles('member1'))
+        self.failIf('TrackerManager' in roles('member1'))
         self.tracker.setManagers(('member1', ))
-        self.failUnless('Manager' in roles('member1'))
-        self.tracker.setManagers(('member2', ))
         self.failIf('Manager' in roles('member1'))
-        self.failUnless('Manager' in roles('member2'))
+        self.failUnless('TrackerManager' in roles('member1'))
+        self.tracker.setManagers(('member2', ))
+        self.failIf('TrackerManager' in roles('member1'))
+        self.failUnless('TrackerManager' in roles('member2'))
         # Now we mess with local roles and see if setting the tracker
         # managers fixes it.
         self.tracker.manage_delLocalRoles(['member2'])
         self.tracker.setManagers(('member2', ))
-        self.failUnless('Manager' in roles('member2'))
-        self.tracker.manage_setLocalRoles('member2', ['Owner', 'Manager'])
+        self.failUnless('TrackerManager' in roles('member2'))
+        self.tracker.manage_setLocalRoles('member2', ['Owner', 'TrackerManager'])
         self.tracker.manage_setLocalRoles('member1', ['Reviewer'])
         self.tracker.setManagers(('member1', 'member2'))
-        self.failUnless('Manager' in roles('member2'))
-        self.failUnless('Manager' in roles('member1'))
+        self.failUnless('TrackerManager' in roles('member2'))
+        self.failUnless('TrackerManager' in roles('member1'))
         self.failUnless('Owner' in roles('member2'))
         self.failUnless('Reviewer' in roles('member1'))
         self.tracker.setManagers(('member2', ))
@@ -339,7 +341,7 @@ class TestTrackerSearch(ptc.PoiTestCase):
         self.createIssue(self.tracker)
         self.createIssue(self.tracker)
         self.createIssue(self.tracker)
-        self.setRoles(['Manager'])
+        self.setRoles(['TrackerManager'])
         self.workflow.doActionFor(self.tracker['3'], 'accept-unconfirmed')
         self.setRoles(['Member'])
         issues = [b.getId for b in
