@@ -5,6 +5,11 @@ Changelog for Poi
 1.3 (unreleased)
 ----------------
 
+- Added TrackerManager role.  Give this role to users mentioned in the
+  managers field of a tracker, instead of the more powerful Manager
+  role.
+  [maurits]
+
 - Removed ``skins/Poi/poi_issue_quicksearch.py`` in favour of our new
   ``@@poi_issue_quicksearch`` view.
   [maurits]
